tests/snapshots/run_wpt_conformance__trtx_gemm_two_float16_2D_tensors_options_bTranspose_being_explicit_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gemm.https.any.js",
    "gemm two float16 2D tensors options.bTranspose being explicit false",
    "trtx",
    "PASS",
)
